--- a/src/main/webapp/i18n/en/health.json
+++ b/src/main/webapp/i18n/en/health.json
@@ -17,7 +17,7 @@
             "hystrix": "Hystrix",
             "diskSpace": "Disk space",
             "mail": "Email",
-            "mongo": "MongoDB"
+            "db": "Database"
         },
         "table": {
             "service": "Service name",
