--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -12,6 +12,7 @@ email.activation.text2=Regards,
 email.signature=gateway Team.
 
 # Creation email
+email.creation.title=gateway account created
 email.creation.text1=Your gateway account has been created, please click on the URL below to access it:
 
 # Reset email
